# atlas-ai

./: .gitignore  README.md  pyproject.toml
.github/workflows/: performance-ci.yml
scripts/: benchmark_distributed_scaling.py  benchmark_inference_api.py  benchmark_optimizers.py  benchmark_transformer_generation.py  plot_mlp_loss.py  plot_scaling_efficiency.py
src/atlas_ai/: cli.py  system_info.py
src/atlas_ai/autograd/: value.py
src/atlas_ai/benchmark/: benchmark_runner.py  benchmark_store.py  regression_detector.py
src/atlas_ai/checkpoint/: checkpoint_manager.py
src/atlas_ai/distributed/: distributed_simulator.py
src/atlas_ai/monitoring/: dashboard_metrics.py  inference_metrics.py  memory_profiler.py
src/atlas_ai/nn/: modules.py
src/atlas_ai/optim/: optimizers.py
src/atlas_ai/profiler/: system_profiler.py
src/atlas_ai/serving/: inference_server.py
src/atlas_ai/tracker/: experiment_tracker.py
tests/: test_attention.py  test_autograd_activations.py  test_autograd_value.py  test_benchmark_runner.py  test_benchmark_store.py  test_checkpoint_manager.py  test_communication_profiler.py  test_distributed_runtime.py  test_distributed_simulator.py  test_embeddings.py  test_experiment_tracker.py  test_generation.py  test_gradient_sync.py  test_kv_cache.py  test_memory_profiler.py  test_mlp_trainer.py  test_nn_modules.py  test_optimizers.py  test_positional_encoding.py  test_regression_detector.py  test_simple_trainer.py  test_streaming.py  test_system_info.py  test_system_profiler.py  test_transformer_block.py  test_transformer_model.py
(+13 files in other folders)
